syntax = "proto3";

package goulding.proto;

// Start a canary request.
message CanaryRequest {
    string canary = 1;

    // TODO(zecke): Establish well known canary parts like instance..
    map<string, string> parameters = 2;
}

//
message CanaryVerdict {
    bool pass = 1;
    string result = 2;
}

service CanaryService {
    rpc RunCanary(CanaryRequest) returns (CanaryVerdict);
}
